--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,27 @@
 {
   "manifest_version": 3,
-  "name": "DevGaurd",
-  "description": "idek what this does",
+  "name": "Conditional Redirect",
   "version": "1.0",
-  "content_scripts": [
-    {
-      "js": ["scripts/content.js"],
-      "matches": [
-        "https://developer.chrome.com/docs/extensions/*",
-        "https://developer.chrome.com/docs/webstore/*"
-      ]
-    }
-  ]
+  "description": "Redirect certain pages based on conditions.",
+  "permissions": [
+    "declarativeNetRequest","declarativeNetRequestFeedback"],
+  "host_permissions": [
+    "<all_urls>"
+  ],
+  "content_scripts":[{
+    "matches":["https://leetcode.com/problemset/*"],
+    "js":["scripts/content.js"]
+
+  }],
+  
+  "background": {
+    "service_worker": "scripts/background.js" 
+  },
+  "declarative_net_request" : {
+    "rule_resources" : [{
+      "id": "ruleset_1",
+      "enabled": true,
+      "path": "rules_1.json"
+  }]
+  }
 }
