--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,11 @@
 {
   "manifest_version": 3,
-  "name": "Conditional Redirect",
+  "name": "DevGaurd",
   "version": "1.0",
-  "description": "Redirect certain pages based on conditions.",
+  "description": "Make yourself more productive",
   "permissions": [
-    "declarativeNetRequest","declarativeNetRequestFeedback"],
+    "declarativeNetRequest","declarativeNetRequestFeedback","storage","tabs"
+  ],
   "host_permissions": [
     "<all_urls>"
   ],
