--- a/manifest.json
+++ b/manifest.json
@@ -13,6 +13,7 @@
     "default_popup" : "frontend/index.html"
   },
   "background": {
-    "service_worker": "scripts/background.js" 
+    "service_worker": "scripts/background.js",
+    "type":"module"
   }
 }
