--- a/manifest.json
+++ b/manifest.json
@@ -6,6 +6,12 @@
   "permissions": [
     "declarativeNetRequest","declarativeNetRequestFeedback","storage","tabs"
   ],
+  "icons": {
+    "16": "./images/icon16.png",
+    "32": "./images/icon32.png",
+    "48": "./images/icon48.png",
+    "128": "./images/icon128.png"
+  },
   "host_permissions": [
     "<all_urls>"
   ],
