--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
   "version": "1.0",
   "description": "Make yourself more productive",
   "permissions": [
-    "declarativeNetRequest","declarativeNetRequestFeedback","storage","tabs"
+    "declarativeNetRequest","declarativeNetRequestFeedback","storage"
   ],
   "icons": {
     "16": "./images/icon16.png",
